--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,121 +1,54 @@
 .container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  --color-red: hsl(0, 100%, 15%);
+  --color-dark: #000;
+  --color-cyan: #333;
+  --color-light: hsl(0, 0%, 33%);
+  --color-font: hsl(0, 0%, 100%);
+
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  grid-template-rows: 3rem auto;
+  grid-template-areas:
+    "nav nav nav"
+    "main main main";
 }
 
 .main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-area: main;
+  grid-template-columns: 1fr 5fr 1fr;
+  /* grid-template-rows: 1fr; */
+  grid-template-areas: ". content .";
+  padding: 1rem;
+  background: var(--color-dark);
 }
 
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  width: 45%;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
+@media only screen and (max-width: 700px) {
+  .container {
+    display: grid;
+    grid-template-columns: 3rem auto;
+    grid-template-rows: 3rem auto;
+    grid-template-areas:
+      "nav main main"
+      "nav main main";
   }
+  .main {
+    grid-template-columns: 0 5fr;
+    grid-template-areas: ". content";
+  }
+}
+
+
+
+.content {
+  color: var(--color-font);
+  grid-area: content;
+  background-color: var(--color-light);
+  border-radius: 5px;
+  padding: 1rem;
+}
+
+.nav {
+  grid-area: nav;
+  background: var(--color-red);
 }
