--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,7 @@
 .container {
   --color-red: hsl(0, 100%, 15%);
   --color-dark: #000;
-  --color-cyan: #333;
+  --color-cyan: #033;
   --color-light: hsl(0, 0%, 33%);
   --color-font: hsl(0, 0%, 100%);
 
@@ -62,6 +62,12 @@
   grid-area: logo;
   height: 1.5rem;
   align-items: center;
+  transition: transform 500ms ease-in-out;
+  fill: var(--color-cyan);
+}
+
+.icon:hover {
+  transform: rotate(15deg);
 }
 
 .nav ul {
@@ -73,7 +79,7 @@
 }
 
 .nav li {
-  padding-right: 1rem;
+  padding-left: 1rem;
 }
 
 .nav a {
@@ -85,12 +91,13 @@
   display: block;
   background: var(--color-font);
   opacity: 0;
-  height: 2px;
+  height: 3px;
+  border-radius: 2px;
   transition: opacity 750ms ease-in-out;
   position: absolute;
-  bottom: -10px;
-  left: 0;
-  right: 0;
+  bottom: -0.6rem;
+  left: -5px;
+  right: -5px;
 }
 
 .nav a:hover::after {
