--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,18 @@
+:root {
+  --color-red: hsl(0, 100%, 15%);
+  --color-dark: #000;
+  --color-cyan: #033;
+  --color-light: hsl(0, 0%, 33%);
+  --color-font: hsl(0, 0%, 100%);
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+    Helvetica Neue, sans-serif;
+  background: #000;
 }
 
 a {
@@ -13,4 +22,16 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+::-webkit-scrollbar {
+  width: 0.25rem;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 3px;
+  background-color: var(--color-light);
+  filter: brightness(1);
+  box-shadow: inset 1px 1px 3px var(--color-light);
 }
