--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,3 +35,112 @@ a {
   filter: brightness(1);
   box-shadow: inset 1px 1px 3px var(--color-light);
 }
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  grid-template-rows: 3rem auto;
+  grid-template-areas:
+    "nav nav nav"
+    "main main main";
+  /* row-gap: 1rem; */
+}
+
+.main {
+  display: grid;
+  grid-area: main;
+  grid-template-columns: 1fr 5fr 1fr;
+  grid-template-areas: ". content .";
+  grid-auto-rows: auto;
+  /* grid-gap: 100px; */
+  background: var(--color-dark);
+}
+
+section {
+  color: var(--color-font);
+  /* grid-area: content; */
+  grid-column: 2/3;
+  background-color: var(--color-light);
+  border-radius: 5px;
+  padding: 1rem;
+  padding-top: 0;
+  margin-top: 1rem;
+}
+
+section *:first-child {
+  margin-top: 0;
+}
+
+.banner-icon {
+  grid-area: logo;
+  height: 1.5rem;
+  align-items: center;
+  transition: transform 500ms ease-in-out;
+  fill: var(--color-cyan);
+}
+
+.banner-icon:hover {
+  transform: rotate(15deg);
+}
+
+nav {
+  grid-area: nav;
+  background: var(--color-red);
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr 1fr;
+  grid-template-areas: ". logo links .";
+  align-items: center;
+}
+
+nav ul {
+  grid-area: links;
+  display: flex;
+  list-style: none;
+  color: var(--color-font);
+  justify-content: flex-end;
+}
+
+nav li {
+  padding-left: 1rem;
+}
+
+nav a {
+  position: relative;
+}
+
+nav a:after {
+  content: "";
+  display: block;
+  background: var(--color-font);
+  opacity: 0;
+  height: 3px;
+  border-radius: 2px 2px 0 0;
+  transition: opacity 750ms ease-in-out;
+  position: absolute;
+  bottom: -0.6rem;
+  left: -5px;
+  right: -5px;
+}
+
+nav a:hover::after {
+  opacity: 1;
+}
+
+@media only screen and (max-width: 700px) {
+  .container {
+    display: grid;
+    grid-template-columns: 3rem auto;
+    grid-template-rows: 3rem auto;
+    grid-template-areas:
+      "nav main main"
+      "nav main main";
+  }
+  .main {
+    grid-template-columns: 0 5fr;
+    grid-template-areas: ". content";
+  }
+  section {
+    margin: 0.5rem;
+    padding: 0.5rem;
+  }
+}
