--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,8 +14,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-    Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background: #000;
 }
 
@@ -34,6 +34,7 @@ a {
 }
 
 ::-webkit-scrollbar-thumb {
+  display: none;
   border-radius: 3px;
   background-color: var(--color-light);
   filter: brightness(1);
