--- a/styles/vasttrafik.module.css
+++ b/styles/vasttrafik.module.css
@@ -1,13 +1,20 @@
 .vast {
   color: lightgrey;
-  /* border: 1px solid lightblue; */
   max-width: 800;
   display: flex;
 }
 
+.card > * {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 .card {
+  min-width: 25rem;
+  max-width: 25rem;
   padding: 0.25rem;
   display: flex;
+  justify-content: space-between;
   font-weight: bold;
 }
 
@@ -19,8 +26,33 @@
 
 .cardDir {
   margin-right: 1rem;
+  overflow: hidden;
 }
 
 .cardETA > * {
   margin-right: 1rem;
+}
+
+.slider {
+  animation-name: example;
+  animation-duration: 20s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  --end: calc(-100% + 120rem);
+}
+
+@keyframes example {
+  0% {
+    transform: translateX(5rem);
+  }
+  5% {
+    transform: translateX(5rem);
+  }
+  95% {
+    transform: translateX(var(--end));
+  }
+  100% {
+    transform: translateX(var(--end));
+  }
 }
