minor fix child lenght

--- a/styles/vasttrafik.module.css
+++ b/styles/vasttrafik.module.css
@@ -1,7 +1,9 @@
 .vast {
   color: lightgrey;
-  max-width: 800;
+  max-width: 1200px;
   display: flex;
+  border: 1px saddlebrown solid;
+  overflow: hidden;
 }
 
 .card > * {
