--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@
   --color-red: hsl(0, 100%, 15%);
   --color-dark: #000;
   --color-cyan: #033;
+  --color-selection-bg: hsl(0, 0%, 18%);
   --color-light: hsl(0, 0%, 33%);
   --color-font: hsl(0, 0%, 100%);
 
@@ -67,10 +68,10 @@ section {
   color: var(--color-font);
   /* grid-area: content; */
   grid-column: 2/3;
-  background-color: var(--color-light);
+  background-color: var(--color-selection-bg);
   border-radius: 5px;
   padding: 1rem;
-  padding-top: 0;
+  padding-top: 1rem;
   margin-top: 1rem;
 }
 
