--- a/styles/markdownReader.module.css
+++ b/styles/markdownReader.module.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.2.0/build/styles/vs2015.min.css");
+
 .container img {
     max-width: 100%;
 }
