--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,9 +4,11 @@
   --color-red: hsl(0, 100%, 15%);
   --color-dark: #000;
   --color-cyan: #033;
-  --color-selection-bg: hsl(0, 0%, 18%);
-  --color-light: hsl(0, 0%, 33%);
-  --color-font: hsl(0, 0%, 100%);
+  --color-selection-bg: hsl(0, 0%, 20%);
+  --color-light: hsl(0, 0%, 25%);
+  --color-font: hsl(0, 0%, 80%);
+  --color-font-darker: hsl(0, 0%, 60%);
+  --color-font-lighter: hsl(0, 0%, 100%);
 
   --grid-size-nav-bar: 3rem;
 }
