--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,9 @@
   --color-dark: #000;
   --color-cyan: #033;
   --color-selection-bg: hsl(0, 0%, 20%);
+  /* --color-selection-bg: hsl(0, 0%, 20%); */
   --color-light: hsl(0, 0%, 25%);
+  --color-lighter: hsl(0, 0%, 90%);
   --color-font: hsl(0, 0%, 80%);
   --color-font-darker: hsl(0, 0%, 60%);
   --color-font-lighter: hsl(0, 0%, 100%);
