--- a/styles/counter.module.css
+++ b/styles/counter.module.css
@@ -5,7 +5,20 @@
 
 .warning-text {
   background-color: orange;
-  padding: 1rem 5rem;
+  padding: 0.5rem 5rem;
+  text-align: center;
+
+}
+
+.input-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.input-container input {
+  padding: .5rem;
   text-align: center;
 }
 
